2.0.4:
* Added DigitalText connection support
* Fixed a bug where having no connections would cause the GUI to never load
* Added tag to close the HTML table in HTMLOutputEventHandler (Issue 57)
* Introduced the ITunesController class to SVN; not connected to the bot yet
* Introduced first-pass SWT code to SVN
* Added a PluginManager for plugin discovery with the JARLoader
* Changed /rw to StealthBot-style rewhisper (Issue 58)
* Added the concept of a TimeZone to the HTMLOutputEventHandler
* Reorganized the Settings class
* Added a BNLS bot id
* Changed the way commands respond to fit a more object-oriented model
* Changed the "What's New" window's layout to use cards instead of tabs
* Removed the database tab from the settings window
* Removed the touchUser() exception display
* Added a /quote command to send text directly to bnet

2.0.3.1 (r1100) 2008-01-21:
* Added a setting to customize the userlist display format
* Added a setting to customize the command response display format
* Added a setting to enable the HTMLOutput plugin
* Moved the HTMLOutput userlist to logs
* Added highlighting of "my user" in the userlist
* Improved version comparison logic
* Removed the checkbox to disable the GUI from the GUI
* Disabled resizing of configuration windows
* Added logic to prevent KeyManager from choking on tabs
* Addressed a common problem with Derby and CommandEventHandler.touchUser() 
* Added BNetUser.toStringEx() to display ping and flags
* Fixed a bug where 'commander access' was not passed to commands properly
* Added a 'setauth' command
* Added a version editor utility
* Added an option to disable tab completion
* Added an option to disable minimize to system tray

2.0.3 (r1072) 2008-01-07:
* Completely redesigned the command subsystem to fit a more object-oriented model
* Commands not in the database will be created with maximum (master) access
* Changed server, port, and channel to profile-specific fields