@@ -2,7 +2,7 @@
 * Added DigitalText connection support
 * Fixed a bug where having no connections would cause the GUI to never load
 * Added tag to close the HTML table in HTMLOutputEventHandler (Issue 57)
-* Introduced the ITunesController class to SVN; not connected to the bot yet
+* Introduced the ITunesController class for OSX; use with %mp3%
 * Introduced first-pass SWT code to SVN
 * Added a PluginManager for plugin discovery with the JARLoader
 * Changed /rw to StealthBot-style rewhisper (Issue 58)
@@ -14,6 +14,7 @@
 * Removed the database tab from the settings window
 * Removed the touchUser() exception display
 * Added a /quote command to send text directly to bnet
+* Added an OperatingSystem enumeration utility
 
 2.0.3.1 (r1100) 2008-01-21:
 * Added a setting to customize the userlist display format
